Fix table header contract in dark mode

--- a/src/registrar/assets/sass/_theme/_admin.scss
+++ b/src/registrar/assets/sass/_theme/_admin.scss
@@ -106,16 +106,22 @@ html[data-theme="light"] {
 
     // Dark mode django (bug due to scss cascade) and USWDS tables
     .change-list .usa-table,
-    .change-list .usa-table--striped tbody tr:nth-child(odd) td {
-        color: var(--body-fg)!important;
+    .change-list .usa-table--striped tbody tr:nth-child(odd) td,
+    .change-list .usa-table--borderless thead th,
+    .change-list .usa-table thead td, 
+    .change-list .usa-table thead th {
+        color: var(--body-fg);
     }
 }
 
 // Firefox needs this to be specifically set
 html[data-theme="dark"] {
     .change-list .usa-table,
-    .change-list .usa-table--striped tbody tr:nth-child(odd) td {
-        color: var(--body-fg)!important;
+    .change-list .usa-table--striped tbody tr:nth-child(odd) td,
+    .change-list .usa-table--borderless thead th,
+    .change-list .usa-table thead td, 
+    .change-list .usa-table thead th {
+        color: var(--body-fg);
     }
 }
 
